Update lesson two with Lab session

--- a/introduction/week_1/Fundamentals of returns.ipynb
+++ b/introduction/week_1/Fundamentals of returns.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
        "0.12682503013196977"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
        "array([ 0.02413793, -0.02244669])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +352,7 @@
        "4  8.73  12.11"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +436,7 @@
        "4  8.73  12.11"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +515,7 @@
        "3  8.43  11.59"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
        "4   NaN    NaN"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +679,7 @@
        "3  0.035587  0.044866"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +751,7 @@
        "4  0.035587  0.044866"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -836,7 +836,7 @@
        "4  8.73  12.11"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -847,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -914,7 +914,7 @@
        "4  0.035587  0.044866"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -932,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -999,7 +999,7 @@
        "4  0.035587  0.044866"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1018,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1072,68 +1072,20 @@
        "      <td>8.7254</td>\n",
        "      <td>12.1070</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>9.0551</td>\n",
-       "      <td>11.7876</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>8.9514</td>\n",
-       "      <td>11.2078</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>9.2439</td>\n",
-       "      <td>12.5192</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>9.1276</td>\n",
-       "      <td>13.3624</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>9.3976</td>\n",
-       "      <td>14.4080</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>9.4554</td>\n",
-       "      <td>11.9837</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>9.5704</td>\n",
-       "      <td>12.2718</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>9.7728</td>\n",
-       "      <td>11.5892</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      BLUE   ORANGE\n",
-       "0   8.7000  10.6600\n",
-       "1   8.9055  11.0828\n",
-       "2   8.7113  10.7100\n",
-       "3   8.4346  11.5907\n",
-       "4   8.7254  12.1070\n",
-       "5   9.0551  11.7876\n",
-       "6   8.9514  11.2078\n",
-       "7   9.2439  12.5192\n",
-       "8   9.1276  13.3624\n",
-       "9   9.3976  14.4080\n",
-       "10  9.4554  11.9837\n",
-       "11  9.5704  12.2718\n",
-       "12  9.7728  11.5892"
+       "     BLUE   ORANGE\n",
+       "0  8.7000  10.6600\n",
+       "1  8.9055  11.0828\n",
+       "2  8.7113  10.7100\n",
+       "3  8.4346  11.5907\n",
+       "4  8.7254  12.1070"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1141,15 +1093,14 @@
    "source": [
     "from pathlib import Path\n",
     "data_path = Path().cwd().parents[1].joinpath('data')\n",
-    "data_path\n",
     "\n",
     "prices = pd.read_csv(data_path.joinpath('sample_prices.csv'))\n",
-    "prices"
+    "prices.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1264,7 +1215,7 @@
        "12  0.021149 -0.055623"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1276,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1285,7 +1236,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1308,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -1319,7 +1270,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1342,7 +1293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1353,7 +1304,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1364,7 +1315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1375,7 +1326,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1394,7 +1345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1405,7 +1356,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1434,7 +1385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1445,7 +1396,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1456,7 +1407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1467,7 +1418,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
